add README and Brewfile

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Aditya Naithani
-	email = aditya0602@gmail.com
+	email = 58584207+adityanaithani@users.noreply.github.com
 [core]
 	compression = 9
 	whitespace = error
